<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_title"
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:background="@color/title_bg_color" >

    <TextView
        android:id="@+id/home_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/left_btn_selector"
        android:contentDescription="@string/img_description" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/home_back"
        android:gravity="center_vertical"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:text="@string/register"
        android:textColor="@color/white" />

</RelativeLayout>