<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/home_title" />

    <LinearLayout
        android:id="@+id/home_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/homepage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/home_pressed_pink"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/home_pager"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/jobpage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/job_unpress"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/home_job"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/applypage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/applyjob_unpress"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/home_apply_job"
            android:visibility="gone" />

        <TextView
            android:id="@+id/volunteerpage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/volunteer_unpress"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/home_volunteer"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/communicationpage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/communication_unpress"
                android:gravity="center"
                android:padding="5dip"
                android:text="@string/home_communication"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/unread_msg_number"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginTop="5dip"
                android:layout_toRightOf="@id/communicationpage"
                android:background="@drawable/red_dot"
                android:scaleType="centerInside"
                android:textColor="@android:color/white"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/personal_relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/personalpage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/personal_unpress"
                android:gravity="center"
                android:padding="5dip"
                android:text="@string/home_personal"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/company_relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" >

            <TextView
                android:id="@+id/companypage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/company_unpress"
                android:gravity="center"
                android:padding="5dip"
                android:text="@string/home_company"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/company_dot"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginTop="5dip"
                android:layout_toRightOf="@id/companypage"
                android:background="@drawable/red_dot"
                android:scaleType="centerInside"
                android:textColor="@android:color/white"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/line_view"
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:layout_above="@id/home_bottom"
        android:background="@drawable/view_shadow" />

    <RelativeLayout
        android:id="@+id/home_center"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/line_view"
        android:layout_below="@id/home_title" >
    </RelativeLayout>

</RelativeLayout>